--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,9 @@
 footer {
+	position: fixed;
+	bottom: 0;
 	background-color: #00FF00;
 	height: 60px;
 	width: 100%;
 	text-align: center;
-	bottom: 0;
-	position: absolute;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	line-height: 60px;
 }
