--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,11 +6,7 @@ body {
 	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-
 .container {
 	max-width: 1000px;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	margin-right: auto;
-	margin-left: auto;
+	margin: 30px auto;
 }
