--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,15 +2,13 @@
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border: 1px #DDDDDD;
+	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 	display: flex;
-	position: absolute;
-	align-items: center;
+	justify-content: right;
 }
 
-
-.button {
+button {
 	font-size: 18px;
 	background-color: #FF5A5F;
 	color: #FFFFFF;
@@ -18,8 +16,9 @@
 	width: 20%;
 	border: none;
 	border-radius: 4px;
-	border-right: 30px;
-	position: absolute;
+	margin-right: 30px;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 button:hover {
