--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -5,43 +5,44 @@
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 	display: flex;
-	position: absolute;
 	align-items: center;
 }
 
-
-.button {
+button {
 	font-size: 18px;
 	background-color: #FF5A5F;
 	color: #FFFFFF;
 	height: 48px;
 	width: 20%;
-	border: none;
+	border-style: none;
 	border-radius: 4px;
-	border-right: 30px;
-	position: absolute;
+	margin-right: 30px;
+	margin-left: auto;
 }
 
 button:hover {
 	opacity: 90%;
 }
 
-.filters .amenities{
-	height: 100%;
-	width: 25%;
-}
-
-.filters .locations{
+.locations {
 	height: 100%;
 	width: 25%;
 	border-right: 1px solid #DDDDDD;
 }
 
-h3{
-	font-weight: 600;
+.amenities {
+	height: 100%;
+	width: 25%;
+
 }
 
-h4{
+h3 {
+	font-weight: 600;
+	margin: 10px 20px 4px 30px;
+}
+
+h4 {
 	font-weight: 400;
 	font-size: 14px;
+	margin: 4px 20px auto 30px;
 }
